Allow setting an upload maximum size in MB for receive mode

--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -141,6 +141,7 @@
     "gui_settings_receiving_label": "Receiving settings",
     "gui_settings_data_dir_label": "Save files to",
     "gui_settings_data_dir_browse_button": "Browse",
+    "gui_settings_upload_max_size_label": "Max upload size in MB (0 = no limit)",
     "gui_settings_public_mode_checkbox": "Public mode",
     "gui_open_folder_error_nautilus": "Cannot open folder because nautilus is not available. The file is here: {}",
     "gui_settings_language_label": "Preferred language",
@@ -177,6 +178,7 @@
     "gui_receive_mode_autostop_timer_waiting": "Waiting to finish receiving",
     "gui_visit_started": "Someone has visited your website {}",
     "receive_mode_upload_starting": "Upload of total size {} is starting",
+    "receive_mode_upload_too_large": "Couldn't receive a file because it was too large",
     "days_first_letter": "d",
     "hours_first_letter": "h",
     "minutes_first_letter": "m",
