--- a/share/locale/en.json
+++ b/share/locale/en.json
@@ -52,6 +52,7 @@
     "gui_settings_onion_label": "Onion settings",
     "gui_settings_sharing_label": "Sharing settings",
     "gui_settings_close_after_first_download_option": "Stop sharing after files have been sent",
+    "gui_settings_individual_downloads_label": "Uncheck to allow downloading individual files",
     "gui_settings_connection_type_label": "How should OnionShare connect to Tor?",
     "gui_settings_connection_type_bundled_option": "Use the Tor version built into OnionShare",
     "gui_settings_connection_type_automatic_option": "Attempt auto-configuration with Tor Browser",
